<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.melophile.MainActivity">

    <TextView
        android:id="@+id/myMusic_text"
        style="@style/ItemTextStyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/main_layout"
        android:text="@string/myMusic_text" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_layout_line1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/myMusic"
                style="@style/MaintItemStyle"
                android:layout_width="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/category_myMusic" />

            <Button
                android:id="@+id/podcast"
                style="@style/MaintItemStyle"
                android:layout_width="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/category_podcast" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_line2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/radio"
                style="@style/MaintItemStyle"
                android:layout_width="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/category_radio" />

            <Button
                android:id="@+id/settings"
                style="@style/MaintItemStyle"
                android:layout_width="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/category_settings" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
